fix recipe header spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,7 +119,6 @@ body.pushable {
 
   h1 {
     margin-bottom: 11.5rem;
-    margin-top: 7rem;
 
     @media (min-width: $desktop) {
       margin-top: 0.5rem;
